Fixed paragraph spacing in Projects page

--- a/src/styles/project.module.css
+++ b/src/styles/project.module.css
@@ -60,7 +60,7 @@
         margin-bottom: 1em;
     }
     .description{
-        width: 80vw;
+        width: 313px;
         margin-left: 9vw;
     }
 
